# fast-agent-demo

./: .env.example  .gitignore  AGENTS.md  README.md  components.py  dev  junk.ipynb  main.py  pyproject.toml  requirements.txt
agents/: agent.py  coding_sandbox.py  driver_program.py  prompts.py  tools.py
agents/ui/: __init__.py  components.py  tool_renderers.py
tests/: __init__.py  conftest.py  test_agent.py  test_coding_sandbox.py  test_components.py  test_markdown.py  test_routes.py  test_tool_renderers.py  test_tools.py
